# results

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.in
results/: __init__.py  annotations.py  command.py  connections.py  constants.py  createdrop.py  database.py  formatting.py  inserting.py  loading.py  lockinfo.py  migration.py  notify.py  paging.py  pivoting.py  psyco.py  resultset.py  rows.py  schemas.py  statements.py  syntax.py  tempdb.py  typeguess.py  urls.py
results/dbdiff/: __init__.py  changes.py  migra.py  ordered.py  statements.py  util.py
results/schemainspect/: __init__.py  definition.py  get.py  inspected.py  inspector.py  misc.py
results/schemainspect/pg/: obj.py
results/schemainspect/pg/sql/: collations.sql  constraints.sql  extoids.sql  fn_deps.sql  functions.sql  indexes.sql  relations.sql  triggers.sql  types.sql
results/utils/: sqla.py
tests/: test_db.py  test_definition.py  test_fn_deps.py  test_general.py  test_lockinfo.py  test_openers.py  test_parameterization.py  test_pivot.py  test_results.py
tests/FIXTURES/sql/: functions.sql
