[tool.poetry]
name = "results"
version = "0.1"
description = "Don't get mad, get results"
authors = ["Robert Lechte <rlechte@actu.org.au>", "Jason Giancono <jgiancono@actu.org.au>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7"
psycopg2-binary = "*"
logx = "*"
csvx = "*"
sqlbag = ">=0.1.1548994599"
sqlalchemy = "*"
xlrd = {version="*", optional=true}
openpyxl = {version="<2.5.10", optional=true}
xlsxwriter = {version="*", optional=true}
tabulate = "*"
markdown = "*"
migra = "*"
furl = "*"
chardet = "*"
pendulum = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
pyyaml = "*"
flake8 = "*"
pytest-cov = "*"
black = {python=">3.6", version=">=18.9b0", allow_prereleases=true}

[tool.poetry.extras]
excel = ["xlrd", "openpyxl", "xlsxwriter"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
