[tool.poetry]
name = "results"
version = "0.1"
description = "Don't get mad, get results"
authors = ["Robert Lechte <rlechte@actu.org.au>", "Jason Giancono <jgiancono@actu.org.au>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7"
psycopg2-binary = "*"
logx = "*"
csvx = "*"
sqlbag = ">=0.1.1548994599"
sqlalchemy = ">=1.3"
xlrd = {version="*", optional=true}
openpyxl = {version="<2.6.3", optional=true}
xlsxwriter = {version="*", optional=true}
tabulate = "*"
markdown = "*"
migra = "*"
furl = "*"
chardet = "*"
pendulum = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
pyyaml = "*"
flake8 = "*"
pytest-cov = "*"
black = ">=19.10b0"
pgnotify = "*"

[tool.poetry.extras]
excel = ["xlrd", "openpyxl", "xlsxwriter"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
